--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_1",
+  "name": "jwtBackEnd",
   "version": "1.0.0",
   "description": "jwt nodejs react",
   "main": "server.js",
